# gelab-zero

./: .gitignore  BUILD_INSTRUCTIONS.md  README.md  README_CN.md  README_GelabZeroTaskRunner.md  README_With_HiddenSurfaceControl.md  TODO_GelabZeroTaskRunner.md  call_exe_example.py  config.yaml  gelab-zero.code-workspace  gelab_zero.spec  gui_app.py  gui_control.py  main.py  model_config.yaml  pyproject.toml  version_info.txt
copilot_agent_client/: pu_client.py
copilot_agent_server/: local_server.py  local_server_logger.py
copilot_front_end/: HiddenSurfaceControl.apk  hidden_surface_control_utils.py  mobile_action_helper.py  package_map.py  pu_frontend_executor.py
copilot_tools/: parser_0920_summary.py
examples/: run_single_task.py  run_task_via_mcp.py  run_test_api.py
mcp_server/: detailed_gelab_mcp_server.py  mcp_backend_implements.py  simple_gelab_mcp_server.py  simple_gelab_mcp_server_withcaption.py
tools/: ask_llm_v2.py
