[project]
name = "hellogelab-zero"
version = "0.1.0"
description = "Hello GELab-Zero"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "megfile",
    "opencv-python",
    "jsonlines",
    "pydantic",
    "fastapi",
    "uvicorn",
    "pymongo",
    "openai==0.28.0",
    "pandas",
    "Pillow",
    "openpyxl",
    "streamlit",
    "tqdm",
    "requests",
    "fastmcp",
    "pygetwindow",
    "pyinstaller",
]
 
